使用redis缓存优化

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-# Project exclude paths
-/target/
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
