--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,14 @@
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
 
+        <!--导入Knife4j的maven坐标-->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
